--- a/modern_style.css
+++ b/modern_style.css
@@ -406,50 +406,6 @@ color:white;
 color:white;
 }
 
-.socialwiki_username
-{
-	margin-left:10px;
-}
-.following .like
-{
-	margin-left:5px;
-}
-.socialwiki_manageheading
-{
-text-align:center;
-}
-
-.socialwiki_followlist
-{
-text-align:left;
-}
-
-.following
-{
-margin-left:25px;
-}
-
-.userpicture
-{
-margin-left:25px;
-}
-
-
-.phptree
-{
-	overflow:auto;
-	text-align:left;
-}
-.socialwiki_treebox
-{
-	margin-left:5px;
-	display:inline-block;
-	border-color:white;
-	border-width:1px;
-	border-style:solid;
-	margin-bottom:0px;
-	padding:10px;
-}
 
 #socialwiki_searchresults_area
 {
@@ -475,7 +431,7 @@ text-align:left;
 {
 text-align:center;
 }
-.socialwiki_diffbutton
+.socialwiki_treebox
 {
-text-align:center;
+	border-color:white !important;
 }
