--- a/tree_jslib/tree_styles.css
+++ b/tree_jslib/tree_styles.css
@@ -61,3 +61,8 @@ white-space:nowrap;
 {
 white-space:normal;
 }
+
+#tree_container_div
+{
+overflow:auto;
+}
